--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ src/.DS_Store
 node_modules/.cache/default-development/
 node_modules/.cache/.eslintcache
 node_modules/.cache/default-development/index.pack.old
+node_modules/.cache/.eslintcache
